# MarbleRun

./: .gitignore  Automatisierung-in-claude-code.md  README.md  SECURITY.md  USER-DOCU.md  __main__.py  config.json  llmauto.py  pyproject.toml
chains/: ati-software.json  bach-masterplan.json  controller-worker-loop.json  einzelaufgaben.json  forschung-kritik-nachlauf.json  forschung-kritik-schleife.json  forschung-publish.json  forschung-review.json  forschung-todos.json  masterplan-3s1o.json  masterplan-v2.json  review-chain.json  review-only.json  software-bugfix.json  software-entwicklung.json
core/: chain_creator.py  config.py  state.py
docs/: CHAIN_CONFIG_SCHEMA.md  chain_overview.md
legacy/: README.md
modes/: __init__.py  chain.py
prompts/: ati_reviewer_opus.txt  ati_worker_sonnet.txt  cfm_cross_reference_check.txt  einzelaufgaben_controller.txt  einzelaufgaben_opus_worker.txt  einzelaufgaben_sonnet_worker.txt  example_controller.txt  example_reviewer.txt  example_worker.txt  forschung_publish_controller.txt  forschung_publish_opus_worker.txt  forschung_publish_sonnet_worker.txt  forschung_reviewer_opus.txt  forschung_worker_sonnet.txt  masterplan_v2_reviewer.txt  masterplan_v2_worker.txt  research_opus_controller.txt  research_opus_deep.txt  research_opus_worker.txt  research_sonnet_worker.txt  review_only_opus.txt  reviewer_opus_control.txt  software_bugfix_controller.txt  software_bugfix_deep.txt  software_bugfix_opus.txt  software_bugfix_sonnet.txt  software_opus_controller.txt  software_opus_deep.txt  software_opus_worker.txt  worker_sonnet_10.txt  (+1 more)
(+7 files in other folders)
